tests/expected_invalid_foundation_nested_module.diag.out
<input>:2:1: error: foundation modules may not nest additional `module` declarations
    domain module nested {
    ^^^^^^^^^^^^^^^^^^^^^^
